--- a/v2/launch-data.json
+++ b/v2/launch-data.json
@@ -1,3 +1,3 @@
 {
-    "disabledFeatures": ["avatarItemQuickFreePurchase"]
+    "disabledFeatures": ["avatarItemQuickFreePurchase", "bypassUserInventoryBadges"]
 }
