--- a/v2/launch-data.json
+++ b/v2/launch-data.json
@@ -1,3 +1,6 @@
 {
-    "disabledFeatures": ["avatarItemQuickFreePurchase", "bypassUserInventoryBadges"]
+    "disabledFeatures": ["avatarItemQuickFreePurchase", "bypassUserInventoryBadges"],
+    "disabledFeaturesV2": [{
+        "id": "experienceLiveStatsChart"
+    }]
 }
