--- a/v2/launch-data.json
+++ b/v2/launch-data.json
@@ -2,5 +2,7 @@
     "disabledFeatures": ["avatarItemQuickFreePurchase", "bypassUserInventoryBadges"],
     "disabledFeaturesV2": [{
         "id": "experienceLiveStatsChart"
+    }, {
+        "id": "customEmojis"
     }]
 }
