--- a/v2/launch-data.json
+++ b/v2/launch-data.json
@@ -4,5 +4,7 @@
         "id": "experienceLiveStatsChart"
     }, {
         "id": "customEmojis"
+    }, {
+        "id": "improvedConnectionsCarousel"
     }]
 }
