--- a/v2/launch-data.json
+++ b/v2/launch-data.json
@@ -6,5 +6,7 @@
         "id": "customEmojis"
     }, {
         "id": "improvedConnectionsCarousel"
+    }, {
+        "id": "avatarItemArchiveInInventory"
     }]
 }
