--- a/v2/launch-data.json
+++ b/v2/launch-data.json
@@ -8,5 +8,7 @@
         "id": "improvedConnectionsCarousel"
     }, {
         "id": "avatarItemArchiveInInventory"
+    }, {
+        "id": "avatarEditorSearch"
     }]
 }
