--- a/v2/launch-data.json
+++ b/v2/launch-data.json
@@ -10,5 +10,7 @@
         "id": "avatarItemArchiveInInventory"
     }, {
         "id": "avatarEditorSearch"
+    }, {
+        "id": "viewUserProfileLocale"
     }]
 }
