--- a/v2/launch-data.json
+++ b/v2/launch-data.json
@@ -12,5 +12,8 @@
         "id": "avatarEditorSearch"
     }, {
         "id": "viewUserProfileLocale"
+    }, {
+        "id": "improvedServerJoinModal.useDeepLinkProtocol",
+        "versions": ["2.1.20"]
     }]
 }
