--- a/v2/launch-data.json
+++ b/v2/launch-data.json
@@ -1,6 +1,8 @@
 {
     "disabledFeatures": ["avatarItemQuickFreePurchase", "bypassUserInventoryBadges"],
     "disabledFeaturesV2": [{
+        "id": "moveExperienceEvents"
+    }, {
         "id": "experienceLiveStatsChart"
     }, {
         "id": "customEmojis"
